2014-09-08:
  - 'getSummary.glm' now takes care of missing values in weights of glm objects.

2014-08-19:
  - modified some code that Prof Ripley thinks looks 'suspicious'.

2014-06-24:
  - Change of SPSS variable names to lower case is now optional (but still the default).

2014-03-10:
  - Removed modification to getSummary.clm that slipped in from a development branch.

2013-12-06:
  - fixes out-of-bound error and memory leak in 'pspp-portableStream-for-R.c'
    reported by Prof. Ripley.  Eliminated calls to non-exported functions from 'lattice'.
    Marked all example code of 'Simulate' as 'dontrun' to save time during package checks.
    Also did some cosmetic changes to the package vignette 'anes48'.

2013-09-19:
  - fixes of some namespace import issues.

2013-07-28:
  - fix of 'data.set()' and 'Table()' functions.
    Thanks to Gabor Grothendiek and Jeremy Jackson 

2013-03-20:
  - getSummary method for "mer" objects was broken and now is fixed.

2013-02-10:
  - getSummary methods for "ivreg", "tobit" (from package "AER"),
    "hurdle", "zeroinfl" (from package "pscl"),
    "betareg" (from package "betareg"),
    "multinom" (from package "nnet"),
    contributed by Achim Zeileis,
    were included into the package, but had not been exported yet
    from the package namespace.
    This is now fixed.
              

2013-01-27:
  - Minor improvement of 'codebook' output for external SPSS data sets.
  - Fixed a bug in 'dumbswap.c' discovered while building a windows binary.
  
2013-01-26:
  - Included getSummary methods
     - for objects of classes "ivreg", "tobit" (from package "AER"),
                              "hurdle", "zeroinfl" (from package "pscl"),
                              "betareg" (from package "betareg"),
                              "multinom" (from package "nnet"),
                              contributed by Achim Zeileis
    - for objects of classes "polr" (from package "MASS"),